<resources>
    <string name="app_name">CasaSync</string>
    <string name="text_powered_by_devminds">Powered by DevMinds</string>
    <string name="login_email_prompt">Digite seu login</string>
    <string name="login_email_confirm_prompt">Confirme seu login</string>
    <string name="login_password_prompt">Digite sua senha</string>
    <string name="login_password_confirm_prompt">Confirme sua senha</string>
    <string name="login_button">Acessar</string>
    <string name="login_google_button">Entrar com Google</string>
    <string name="login_success_message">Login realizado com sucesso!</string>
    <string name="login_error_message">Erro ao realizar login. Verifique suas credenciais.</string>
    <string name="login_empty_message">Preencha os campos de login!</string>
    <string name="login_exists_message">Este usuário já foi cadastrado. Tente outro login!</string>
    <string name="login_account_text">Já possui conta?</string>
    <string name="login_account_button"><u>Faça o login!</u></string>
    <string name="login_forgot_password_text">Esqueceu sua senha?</string>
    <string name="new_user_text">Novo usuário</string>
    <string name="personal_data_text">Dados Pessoais</string>
    <string name="new_account_text">Ainda não possui uma conta?</string>
    <string name="new_account_button"><u>Cadastre-se!</u></string>
    <string name="new_account_success_message">Cadastro realizado com sucesso!</string>
    <string name="new_account_error_message">Erro ao realizar cadastro. Verifique os dados informados.</string>
    <string name="recovery_title_text">Recuperar Senha</string>
    <string name="recovery_validate_button">Validar</string>
    <string name="recovery_change_password_button">Trocar Senha</string>
    <string name="recovery_new_password_prompt">Digite sua nova senha</string>
    <string name="recovery_login_found_message">Login encontrado!</string>
    <string name="recovery_login_not_found_message">Login não encontrado!</string>
    <string name="recovery_login_empty_message">Preencha o campo de login!</string>
    <string name="recovery_password_changed_message">Senha Alterada!</string>
    <string name="recovery_password_empty_message">Digite uma nova senha!</string>
    <string name="user_name_prompt">Digite seu nome completo</string>
    <string name="user_photo_description">Foto do usuário</string>
    <string name="user_welcome_text">Bem-vindo, </string>
    <string name="user_name_text">Gandalf</string>
    <string name="user_birthdate_prompt">Data de Nascimento</string>
    <string name="gender_male_text">Masculino</string>
    <string name="gender_female_text">Feminino</string>
    <string name="gender_other_text">Outro</string>
    <string name="user_phone_prompt">Telefone para Contato</string>
    <string name="address_title_text">Endereço</string>
    <string name="address_cep_prompt">CEP do seu endereço</string>
    <string name="address_street_prompt">Logradouro/Rua/Avenida</string>
    <string name="address_city_prompt">Nome da Cidade</string>
    <string name="address_district_prompt">Nome do Bairro</string>
    <string name="address_number_prompt">Número do endereço</string>
    <string name="address_complement_prompt">Complemento (casa, apartamento…)</string>
    <string name="new_house_button">Adicionar Casa</string>
    <string name="house_name_prompt">Nome da Casa</string>
    <string name="house_image_description">Imagem da Casa</string>
    <string name="house_enter_text">Você está na casa, </string>
    <string name="house_name_text">Bolsão</string>
    <string name="new_task_button">Adicionar Tarefa</string>
    <string name="task_name_prompt">Nome da Tarefa</string>
    <string name="new_dependent_button">Adicionar Dependente</string>
    <string name="dependent_name_prompt">Nome</string>
    <string name="dependent_email_prompt">Login</string>
    <string name="dependent_passcode_prompt">Senha</string>
    <string name="button_add">Adicionar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_accept_terms">Aceitar Termos de uso</string>
    <string name="button_decline_terms">Recusar Termos de uso</string>
    <string name="button_admin">Responsável</string>
    <string name="button_dependent">Dependente</string>
    <string name="register_buttom">Cadastrar</string>
    <string name="text_enter">Entrar</string>
    <string name="text_or">Ou</string>
    <string name="config_title_text">Configurações</string>
    <string name="contact_security_title_text">Contato e Segurança</string>
    <string name="image_logo_devminds_description">Logo do DevMinds</string>
    <string name="image_logo_google_description">Logo do Google</string>
    <string name="image_logo_casasync_description">Logo do CasaSync</string>
    <string name="text_never_reached">_Nunca chegará aqui_</string>
    <string name="text_main_screen">para bens sozinho no meio da tela</string>
    <string name="rename_dialog">Renomear</string>
    <string name="delete_dialog">Apagar</string>
    <string name="house_options">Opções para a casa: </string>
    <string name="rename_success_house_toast">Casa renomeada</string>
    <string name="dependent_options">Opções para o dependente: </string>
    <string name="rename_success_dependent_toast">Depentende renomeada</string>
    <string name="task_options">Opções para a tarefa: </string>
    <string name="rename_success_task_toast">Tarefa renomeada</string>
    <string name="accept_dialog">Aceitar</string>
    <string name="cancel_dialog">Cancelar</string>
    <string name="confirm_delete_dialog">Quer mesmo apagar:&#160;</string>
    <string name="question_mark">\?</string>
    <string name="success_delete_dialog">, apagado com sucesso!</string>
    <string name="devminds_text">DevMinds</string>
    <string name="welcome_text">Olá,&#160;</string>
    <string name="button_back">Voltar</string>
    <string name="tasks_to">"Tarefas para&#160;"</string>
    <string name="task_name">Nome da tarefa</string>
    <string name="task_description">Descrição da tarefa</string>
    <string name="add_task_dialog">Adicionar nova tarefa</string>
    <string name="invalid_house_name">Digite um nome válido</string>
    <string name="btn_add_dependent">Adicionar novo dependente</string>
    <string name="to_do">O que fazer?\n%s</string>
    <string name="add_new_house">Adicionar nova casa</string>
    <string name="house_name">Nome da casa</string>
    <string name="devminds_team_description">O DevMinds é um grupo criado na faculdade Nova Roma com o propósito de transformar ideias em soluções reais. Em busca de inovação e praticidade, desenvolvemos um aplicativo móvel pensado para facilitar o dia a dia das pessoas. Nossa solução organiza tarefas domésticas de forma simples, inteligente e eficiente, ajudando usuários a terem mais controle, produtividade e tranquilidade na rotina.
Com tecnologia, criatividade e trabalho em equipe, o DevMinds nasce para impactar vidas e tornar o cotidiano mais leve.</string>
    <string name="casasync_app_description">Desenvolvemos um aplicativo móvel inovador, criado para transformar a forma como as tarefas domésticas são organizadas. Nossa solução combina praticidade e tecnologia para tornar o dia a dia mais simples, produtivo e eficiente. Com uma interface intuitiva e recursos pensados para facilitar a rotina, o aplicativo ajuda usuários a manterem tudo sob controle, evitando esquecimentos e tornando a divisão das tarefas muito mais clara e organizada.</string>
    <string name="dev_name1">Anthony Rychard</string>
    <string name="dev_link1">https://github.com/Ryuki49</string>
    <string name="dev_name2">Alyson Thadeu</string>
    <string name="dev_link2">https://github.com/AlysonThadeu</string>
    <string name="dev_name3">Carlos Santana</string>
    <string name="dev_link3">https://github.com/sucsnj</string>
    <string name="dev_name4">Edvan Cordeiro</string>
    <string name="dev_link4">https://github.com/Edvan-Junior</string>
    <string name="dev_name5">Rogens Rocha</string>
    <string name="dev_link5">https://github.com/RogensRocha</string>
    <string name="prevision_date">Data prevista</string>
    <string name="prevision_hour">Hora prevista</string>
    <string name="finish_dialog">Concluir tarefa</string>
    <string name="default_web_client_id">941068486881-41jjnlij8guqt6ofuliia3sh9pue8mvq.apps.googleusercontent.com</string>
    <string name="finished">Concluído</string>
    <string name="snackbar_icon">Ícone do Snackbar</string>
    <string name="item_name">Nome do item</string>
    <string name="user_info">Informações do usuário</string>
    <string name="app_info">Informações do app</string>
    <string name="task">Tarefa</string>
    <string name="depentent">Dependentes</string>
    <string name="add_dependent">Adicionar Dependente</string>
    <string name="user_picture">Foto do usuário</string>
    <string name="hi_user">Olá, Gandalf</string>
    <string name="user_profile">Meu Perfil</string>
    <string name="add_house">Adicionar Casa</string>
    <string name="dependent_picture">Foto do dependente</string>
    <string name="tasks">Tarefas</string>
    <string name="add_task">Adicionar Tarefa</string>
    <string name="dependent">Dependente</string>
    <string name="description_here">Descrição aqui</string>
    <string name="creation_date">Data de criação</string>
    <string name="date">data</string>
    <string name="prevision_conclusion_date">Data prevista de conclusão</string>
    <string name="hour">Hora</string>
    <string name="conclusion_date">Data de conclusão</string>
    <string name="save_changes">Salvar Alterações</string>
    <string name="start_date">Data de início</string>
    <string name="icon_biometric">Imagem da biometria</string>
    <string name="login_with_biometric">Entrar com biometria</string>
    <string name="details">Clique para ver detalhes</string>
    <string name="item_image">Imagem do Item</string>
    <string name="loading">Carregando...</string>
    <string name="starting_app">Iniciando App</string>
    <string name="no_connection">Sem conexão com a internet.</string>
    <string name="auth_success">Autenticação bem-sucedida!</string>
    <string name="auth_fail">Autenticação falhou.</string>
    <string name="unexpected_credential">Erro: Tipo de credencial inesperado.</string>
    <string name="auth_google_error">Erro na autenticação com Google.</string>
    <string name="less_than_one_hour">Menos de uma hora para ser concluída</string>
    <string name="less_than_one_day">Menos de um dia para ser concluída</string>
    <string name="task_finished">Tarefa concluída</string>
    <string name="same_email">Login já cadastrado</string>
    <string name="all_fields_warning">Preencha todos os campos</string>
    <string name="house_id_not_found_error">Erro: ID da casa não encontrado.</string>
    <string name="dependent_added">Dependente adicionado</string>
    <string name="created_house">Casa criada</string>
    <string name="dependent_id_not_found_error">Erro: ID da dependente não encontrado.</string>
    <string name="select_expected_date">Selecione a data prevista de conclusão</string>
    <string name="select_expected_hour">Selecione a hora prevista de conclusão</string>
    <string name="created_task">Tarefa criada</string>
    <string name="not_finished">Não concluído</string>
    <string name="no_hour">Sem hora</string>
    <string name="expected_date">Data prevista para conclusão</string>
    <string name="expected_hour">Hora prevista para conclusão</string>
    <string name="task_saved">Tarefa salva com sucesso!</string>
    <string name="settings">Configurações</string>
    <string name="change_theme">Mudar Tema</string>
    <string name="change_language">Mudar Idioma</string>
    <string name="enable_notifications">Habilitar Notificações</string>
    <string name="enable_alarms">Habilitar Alarmes</string>
    <string name="enable_biometrics">Habilitar Biometria</string>
</resources>