<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--  intro do app  -->
    <FrameLayout
        android:id="@+id/startAppOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF"
        android:visibility="gone"
        android:gravity="center"
        android:elevation="16dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/loadingImage"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:src="@drawable/casasync"
            android:contentDescription="@string/starting_app" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/image_logo_casasync_description"
            android:src="@drawable/casasyncnome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/text_enter"
            android:textStyle="bold"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/txtLoginPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:hint="@string/login_email_prompt"
            android:drawableStart="@drawable/ico_email"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPasswordPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:hint="@string/login_password_prompt"
            android:drawableStart="@drawable/ico_password"
            android:drawablePadding="10dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="2dp"
            android:text="@string/login_forgot_password_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btnLogin"
                style="@style/BotaoAzul"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_or"
            android:textSize="14sp" />
            <!--logar com o google-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/btnGoogleLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ico_google16"
                    android:contentDescription="@string/image_logo_google_description" />

                <TextView
                    android:id="@+id/btnGoogleLoginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_google_button"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txtCreatAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/new_account_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnCreatAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="2dp"
                android:paddingEnd="1dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/azul_escuro"
                android:text="@string/new_account_button"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- botão da biometria -->
        <LinearLayout
            android:id="@+id/btnBiometricLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/icon_biometric"
                android:src="@drawable/img_biometric"
                app:tint="@color/cinza_claro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_biometric"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgFooter"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/image_logo_devminds_description"
                android:src="@drawable/devminds" />

            <TextView
                android:id="@+id/txtFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_powered_by_devminds"
                android:textSize="11sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>