<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="12dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_recycler"
        android:focusable="true"
        android:gravity="top|end"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="15dp">

        <!-- Bloco de textos -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:maxLines="4"
                android:ellipsize="end"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/details"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Imagem à direita -->
        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="top"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerInside"
            android:src="@drawable/devminds" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
